// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component fromAgent colors the message white 1`] = `
<div
  className="Message"
  style={
    Object {
      "backgroundColor": "white",
      "fontFamily": "sans-serif",
    }
  }
>
  <Linkify
    className="Linkify"
    component="a"
    properties={
      Object {
        "rel": "noopener noreferrer",
        "style": Object {
          "fontFamily": "sans-serif",
        },
        "target": "_blank",
      }
    }
  >
    <span
      style={
        Object {
          "fontFamily": "sans-serif",
        }
      }
    >
      text--0
    </span>
  </Linkify>
</div>
`;

exports[`Message component rendering renders with default props 1`] = `
<div
  className="Message fromCustomer"
  style={
    Object {
      "backgroundColor": "#333",
      "fontFamily": "sans-serif",
    }
  }
>
  <Linkify
    className="Linkify"
    component="a"
    properties={
      Object {
        "rel": "noopener noreferrer",
        "style": Object {
          "fontFamily": "sans-serif",
        },
        "target": "_blank",
      }
    }
  >
    <span
      style={
        Object {
          "fontFamily": "sans-serif",
        }
      }
    >
      text--0
    </span>
  </Linkify>
</div>
`;
